Revision history for Test-JSON

0.10    2009-07-03
        Need dependency on JSON::Any 1.20 or greater.

0.07    2009-06-29
        Ensure that we can run with subtests by not having Test::Builder->new
        at the top of the script.
        Bump up minimum version of JSON::Any to minimize bugs.

0.06    2007-12-29
        Minor documentation updates.

0.05    2007-12-29
        Converted to JSON::Any.

0.04    2007-12-29
        Took out all support for versions of JSON prior to 2.0 due to
        installation bugs.

0.03    2007-12-29
        Updated to work with JSON 2.0 or earlier.  Thanks to Makamaka
        Hannyaharamitu for a preliminary patch.

0.02    2005-11-15
        Updated the level setting in is_json() to reflect the correct level.

0.01    2005-11-12
        Easy JSON testing.
