@@ -1,7 +1,9 @@
 Revision history for Test-JSON
 
 0.10    2009-07-03
-        Need dependency on JSON::Any 1.20 or greater.
+        Need dependency on JSON::Any 1.20 or greater.  This resolves rt #32957
+        Inherit from Test::Builder::Module instead of rolling my own exporter.
+
 
 0.07    2009-06-29
         Ensure that we can run with subtests by not having Test::Builder->new
